syntax = "proto3";

package login.service.v1;
option go_package = "project-user/pkg/service/login.service.v1";

message CaptchaReq {
  string mobile = 1;
}

message CaptchaResp {
  string code = 1;
}

message RegisterReq{
  string email = 1;
  string name = 2;
  string password = 3;
  string mobile = 4;
  string captcha = 5;
}

message RegisterResp{
}

service LoginService {
  rpc GetCaptcha(CaptchaReq) returns (CaptchaResp);
  rpc Register(RegisterReq) returns (RegisterResp);
}

// protoc --go_out=./gen --go_opt=paths=source_relative --go-grpc_out=./gen --go-grpc_opt=paths=source_relative  login_service.proto